# sam-engine

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  ARCHITECTURE_SUMMARY.md  CLAUDE.md  DEPLOY.md  Dockerfile  Dockerfile.horizon  MANUAL_USUARIO.md  NEURON_V3_MIGRATION.md  REDIS_QUEUE_SETUP.md  compose.yaml  composer.json  diagnose-reverb.sh  docker-compose.prod.yml  package-lock.json  package.json  phpunit.xml  test-langfuse.sh  test-queue-flow.sh
ai-service/: .env.example  .gitignore  Dockerfile  FASTAPI_QUEUE_INTEGRATION.md  LANGFUSE_SETUP.md  README.md  SETUP.md  check_type_hints.py  inspect_samsara_methods.py  main.py  pyproject.toml  validate_samsara.py
ai-service/agents/: __init__.py  agent_definitions.py  prompts.py  schemas.py
ai-service/agents/evaluator/: agent.py  output_schema.py  samsara_tools.py
ai-service/agents/orchestrator/: output_schema.py
ai-service/agents/prompts/: __init__.py  correlation.py  final_message.py  investigator.py  notification.py  triage.py
ai-service/agents/schemas/: __init__.py  alert_types.py  correlation.py  execution.py  investigation.py  notification.py  triage.py
ai-service/analytics/: __init__.py  engine.py  insight_generator.py  pattern_detector.py  predictor.py  risk_scorer.py
ai-service/api/: __init__.py  analysis_models.py  analysis_routes.py  analytics_models.py  analytics_routes.py  breadcrumbs.py  models.py  routes.py
ai-service/config/: __init__.py  langfuse.py  settings.py
ai-service/core/: __init__.py  concurrency.py  context.py  runtime.py  structured_logging.py
ai-service/logs/: ai-service.json
ai-service/services/: __init__.py  analysis_interpreter.py  fleet_analyzer.py  notification_executor.py  pipeline_executor.py  preloaded_media_analyzer.py  response_builder.py
ai-service/services/analyzers/: __init__.py  anomaly_detection.py  base.py  driver_risk.py  fleet_safety.py  operational_efficiency.py  vehicle_health.py
ai-service/tests/: conftest.py  test_concurrency.py  test_media_analyzer.py  test_pipeline_executor.py  test_response_builder.py  test_routes.py  test_schemas.py
ai-service/tests/payloads/: connectivity_lost_test.json  tampering_obstruction_test.json
ai-service/tools/: __init__.py  samsara_tools.py  twilio_tools.py
bootstrap/: app.php
config/: app.php  broadcasting.php  cors.php  filesystems.php  fortify.php  horizon.php  logging.php  pulse.php  reverb.php  (+3 more)
(+491 files in other folders)
